--- a/app/components/toolbar/noi_filter.html
+++ b/app/components/toolbar/noi_filter.html
@@ -5,7 +5,7 @@
         <span class="input-group-btn">
             <button class="btn btn-default" type="button" id="ys-date-pre"><em class="glyphicon glyphicon-arrow-left"></em></button>
         </span>
-            <input class="form-control" size="16" type="text" value="" data-provide="datepicker" id="month-filter" name="month-filter" ng-model="month-filter">
+            <input size="16" type="text" value="" data-provide="datepicker" id="month-filter" name="month-filter">
             <span class="input-group-btn">
             <button class="btn btn-default" type="button" id="ys-date-next"><em class="glyphicon glyphicon-arrow-right"></em></button>
         </span>
@@ -16,6 +16,7 @@
 <script src="noi_filter.js"></script>
 <script>
     $(document).ready(function(){
+        filters.init();
         filters.monthSelector();
     })
 </script>
