--- a/app/views/datatools/datatool_rent_package_rpanel.html
+++ b/app/views/datatools/datatool_rent_package_rpanel.html
@@ -1,5 +1,5 @@
-<div class="right-content">
-    <div class="reight-panel-header">
+<div class="right-content-wrapper" id="rent-package-rpanel">
+    <div class="right-panel-header">
         <a href="javascript:void(0)" class="closebtn">&times;</a>
         <h3>录入</h3>
     </div>
