--- a/app/views/noi_analyse/noi.html
+++ b/app/views/noi_analyse/noi.html
@@ -708,6 +708,7 @@
             </div>
         </div>
     </div>
-
+    <script src="/app/static/js/views/noi_analyse/noi.js"></script>
 
 </div><!-- amp-content-panel -->
+
