--- a/app/static/css/common/common.css
+++ b/app/static/css/common/common.css
@@ -18,7 +18,7 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;font-weight:normal;font-style: normal;}
 
 .lt-ie9,.no-js{}
 .lt-ie9 .ys-amp, .no-js .ys-amp{display: none;}
-.lt-ie9 .updateBrowser{display: block;width:80%;margin:50px auto;padding:20px;font-size: 18px;color:#333;text-align: center;}
+.lt-ie9 .updateBrowser{display: block;width:80%;margin:50px auto;padding:20px;font-size: 18px;color:#373c42;text-align: center;}
 
 .ys-amp{width:100%;height:100%;max-width:1680px;position: relative;overflow-x:hidden;}
 /* s-d */
@@ -27,7 +27,7 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;font-weight:normal;font-style: normal;}
 #preloader.hide{display: none;}
 
 /*backdrop && loading*/
-.ys-backdrop{ display:none; position:fixed; z-index:9; left:0; right:0; top:0; bottom:0; background-color:#333; opacity: 0;
+.ys-backdrop{ display:none; position:fixed; z-index:9; left:0; right:0; top:0; bottom:0; background-color:#373c42; opacity: 0;
     -webkit-transition: opacity 0.3s;
     -moz-transition: opacity 0.3s;
     -ms-transition: opacity 0.3s;
@@ -79,10 +79,10 @@ a:hover, a:focus, a:active{color:#2da8cc;}
 
 
 
-.amp-btn{padding:0 12px;min-width: 120px;height:40px;line-height:40px;text-align: center;color:#fff;border:0;border-radius:3px;
+.amp-btn{padding:0 12px;min-width:68px;height:40px;line-height:40px;text-align: center;color:#fff;border:0;border-radius:3px;
         background-color:#5ab46e;font-size:15px;position: relative;z-index:99;}
 .amp-btn:hover, .amp-btn:focus, .amp-btn:active,.amp-btn:active:focus, .amp-btn:active:hover{background-color: #55a865;color:#fff;}
-.amp-btn-lg{width:252px;}
+.amp-btn-lg{width:252px;min-width: 120px;}
 .amp-btn-lg:hover, .amp-btn-lg:focus, .amp-btn-lg:active,.amp-btn-lg:active:focus, .amp-btn-lg:active:hover{background-color:#5ab46e;;color:#fff;}
 .amp-btn-lg:before { content: ""; position: absolute; z-index: -1; top: 0; left: 0; right: 0; bottom: 0; background: #55a865;border-radius:3px;
     -webkit-transform: scale(0); transform: scale(0); -webkit-transition-property: transform; transition-property: transform;
@@ -158,7 +158,7 @@ tr.tr-collapse .icon-menu-down {
     line-height: 44px;
     padding: 0;
     font-size: 18px;
-    color: #333;
+    color: #373c42;
 }
 
 /*noi-chart-wrapper*/
