--- a/app/views/datatools/datatool_rent_package.html
+++ b/app/views/datatools/datatool_rent_package.html
@@ -1,4 +1,5 @@
-<div class="amp-content-panel">
+
+<div class="amp-content-panel" id="rent-package">
     <div class="amp-content-header clearfix">
         <!-- Breadcrumb / Summary info-->
         <ul class="header-nav-sub clearfix">
@@ -6,15 +7,23 @@
             <li><a href="../amp/amp_input_investment.html" id="tri-0-1-1" class="header-subnav-item" target="#page-frame">租金包设定</a></li>
         </ul>
     </div><!--amp-content-header-->
-    <div class="ys-block">
+    <div class="amp-block-pd">
         <div class="amp-table-wrapper" id="noi-main-table-wrapper">
             <div class="ys-table-fixed-top" >
                 <table class="table table-no-bordered amp-table table-header-fixed">
+                    <colgroup>
+                        <col width="18%">
+                        <col width="18%">
+                        <col width="18%">
+                        <col width="18%">
+                        <col width="18%">
+                        <col width="10%">
+                    </colgroup>
                     <thead>
                         <tr>
                             <th>铺位号</th>
                             <th>楼层</th>
-                            <th>建筑面积(m&sup2)</th>
+                            <th>建筑面积（m&sup2）</th>
                             <th>业态</th>
                             <th>产权性质</th>
                             <th>租金标准</th>
@@ -24,6 +33,14 @@
             </div>
             <div class="ys-table-main">
                 <table class="table amp-table table-hover table-header-fixed">
+                    <colgroup>
+                        <col width="18%">
+                        <col width="18%">
+                        <col width="18%">
+                        <col width="18%">
+                        <col width="18%">
+                        <col width="10%">
+                    </colgroup>
                     <tbody>
                     <tr>
                         <td>1F 102</td>
@@ -47,13 +64,13 @@
 
             </div>
         </div>
-        <div class="clearfix">
+        <div class="amp-pagination clearfix">
             <div class="btn-wrapper pull-right">
-                <span style="margin-right:10px;"><em id="page-index-bottom">共<i>122</i>条记录，当前第<i>1</i>/<i>7</i>页</em></span>
+                <span style="margin-right:10px;"><em class="page-index-bottom">共<i>122</i>条记录，当前第<i>1</i>/<i>7</i>页</em></span>
                 <div class="btn-group" role="group" aria-label="">
                     <button type="button" class="btn btn-default btn-disable" id="btn-pre-bottom">&lt;</button>
                     <button type="button" class="btn btn-default" id="btn-next-bottom">&gt;</button>
-                    <input type="text" value="1" class="ys-page-num-input">
+                    <input type="text" value="1" class="page-num-input">
                 </div>
 
                 <button type="button" class="btn btn-default amp-btn" id="btn-go">确定</button>
