--- a/app/static/css/main/amp_main.css
+++ b/app/static/css/main/amp_main.css
@@ -250,4 +250,9 @@ a.system-item:hover .ys-icon-systoggle{background-position: -74px -254px;}
 .amp-pagination .amp-btn:active,.amp-pagination .amp-btn:active:focus,
 .amp-pagination .amp-btn:active:hover{background-color: #55a865;color:#fff;}
 
+/*right-panel btn*/
+.rightpanel .btn-wrapper{height:72px;overflow: hidden;padding-top:20px;padding-bottom:20px;}
+.rightpanel .btn-wrapper .amp-btn{height:32px;padding:3px 15px;text-align: center;border-radius:0;font-size:14px;line-height: 24px;border: solid 1px #5ab46e;min-width: 110px;border-radius: 2px;}
+.rightpanel .btn-wrapper .amp-btn.amp-btn-reverse{background-color:#fff;color: #5ab46e;}
+
 
