--- a/app/views/datatools/datatool_rpg_set_index.html
+++ b/app/views/datatools/datatool_rpg_set_index.html
@@ -7,7 +7,7 @@
         </ul>
     </div><!--amp-content-header-->
     <div class="ys-block">
-        <div class="amp-table-wrapper" id="rpg_set_info">
+        <div class="amp-table-wrapper" id="rpg-set-info">
             <table class="table table-right-bordered amp-table" >
                 <thead>
                 <tr>
