data sim update

--- a/app/views/datatools/datatool_sim.html
+++ b/app/views/datatools/datatool_sim.html
@@ -8,12 +8,12 @@
     <div class="ys-block">
         <div class="clearfix">
             <div class="col-xs-6">
-                <div class="swiper-container" style="width:100%;" id="datatool-sim-floor-table">
+                <div class="swiper-container swiper-container-vertical swiper-container-free-mode" style="width:100%;" id="datatool-sim-floor-table">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="ys-mainpanel-inner">
                                 <!--svg here-->
-                                <svg version="1.1" id="ys-svg" xmlns="http://www.w3.org/2000/svg" width="1197px" height="500px" viewBox="0 0 1197 500" preserveAspectRetio="xMidYMid meet">
+                                <svg version="1.1" id="ys-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="1180px" viewBox="0 0 500 1180" preserveAspectRetio="xMidYMid meet">
 
                                 </svg>
                                 <!--svg here-->
@@ -21,6 +21,7 @@
                             </div>
                         </div><!--swiper slide-->
                     </div><!--swiper wrapper-->
+                    <div class="swiper-scrollbar"></div>
                 </div><!--swiper container-->
                 <div class="amp-svg-opt">
                     <h5>铺位</h5>
@@ -35,7 +36,7 @@
                 </div>
             </div>
             <div class="col-xs-6">
-                <div class="swiper-container" style="width:100%;" id="datatool-sim-main-table">
+                <div class="swiper-container swiper-container-vertical swiper-container-free-mode" style="width:100%;" id="datatool-sim-main-table">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="table-wrapper">
@@ -306,7 +307,9 @@
                                 </div>
                             </div>
                         </div><!--swiper slide-->
+
                     </div><!--swiper wrapper-->
+                    <div class="swiper-scrollbar"></div>
                 </div><!--swiper container-->
             </div>
         </div>
