--- a/app/views/datatools/datatool_sim.html
+++ b/app/views/datatools/datatool_sim.html
@@ -7,8 +7,8 @@
     </div><!--amp-content-header-->
     <div class="ys-block">
         <div class="clearfix">
-            <div class="col-xs-6">
-                <div class="swiper-container swiper-container-vertical swiper-container-free-mode" style="width:100%;" id="datatool-sim-floor-table">
+            <div class="col-xs-6"  id="datatool-sim-floor-table">
+                <div class="swiper-container swiper-container-vertical swiper-container-free-mode" style="width:100%;">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="ys-mainpanel-inner">
@@ -21,7 +21,7 @@
                             </div>
                         </div><!--swiper slide-->
                     </div><!--swiper wrapper-->
-                    <div class="swiper-scrollbar"></div>
+                    <!--  <div class="swiper-scrollbar"></div>-->
                 </div><!--swiper container-->
                 <div class="amp-svg-opt">
                     <h5>铺位</h5>
@@ -35,8 +35,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-6">
-                <div class="swiper-container swiper-container-vertical swiper-container-free-mode" style="width:100%;" id="datatool-sim-main-table">
+            <div class="col-xs-6"  id="datatool-sim-main-table">
+                <div class="swiper-container swiper-container-vertical swiper-container-free-mode" style="width:100%;">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="table-wrapper">
@@ -309,7 +309,7 @@
                         </div><!--swiper slide-->
 
                     </div><!--swiper wrapper-->
-                    <div class="swiper-scrollbar"></div>
+                    <!--<div class="swiper-scrollbar"></div>-->
                 </div><!--swiper container-->
             </div>
         </div>
