--- a/app/static/css/common/common.css
+++ b/app/static/css/common/common.css
@@ -74,7 +74,7 @@ h1,h2,h3,h4,h5,h6{margin:0;padding:0;font-weight:normal;font-style: normal;}
 .c-orange{color:#ea7444;}
 /*items button pagenigation etc.. */
 a{color:#55bbe6;}
-a:hover, a:focus, a:active{color:#2da8cc;}
+a:hover, a:focus, a:active{color:#2da8cc;outline: 0;}
 
 
 
