--- a/app/static/css/common/static_table.css
+++ b/app/static/css/common/static_table.css
@@ -135,3 +135,9 @@
 .amp-table.table-right-bordered tbody>tr>td:first-child{padding-left:15px;}
 .amp-table.table-right-bordered thead>tr>th:nth-last-child(1),
 .amp-table.table-right-bordered tbody>tr>td:nth-last-child(1){border-right:0;}
+
+
+/*td active reset*/
+.table>tbody>tr.active>td, .table>tbody>tr.active>th, .table>tbody>tr>td.active, .table>tbody>tr>th.active, .table>tfoot>tr.active>td, .table>tfoot>tr.active>th, .table>tfoot>tr>td.active, .table>tfoot>tr>th.active, .table>thead>tr.active>td, .table>thead>tr.active>th, .table>thead>tr>td.active, .table>thead>tr>th.active {
+    background-color: inherit;
+}
