--- a/app/static/css/views/datatools.css
+++ b/app/static/css/views/datatools.css
@@ -124,12 +124,18 @@
 #datatool-sim #datatool-sim-main-table{position: relative;border-left: solid 1px #dfe5e9;}
 #datatool-sim #datatool-sim-main-table .table-wrapper{padding-top:20px;padding-bottom:20px;border-bottom: solid 1px #dfe5e9;}
 #datatool-sim #datatool-sim-main-table .amp-table{margin-bottom:0;}
-#datatool-sim-main-table .td-input-wrapper input{width:100%;padding:6px 10px;line-height:20px;height:34px;border:solid 1px #dae1e7;background-color:#f3f4f8;}
+/*
+.amp-table .td-input-wrapper input{width:100%;padding:6px 10px;line-height:20px;height:34px;border:solid 1px #dae1e7;background-color:#f3f4f8;}
 
-#datatool-sim .dropdown-menu{right:0;left:inherit;min-width:100%;border:solid 1px #dfe5e9;}
+.amp-table .num-input input{display: none;}
+.amp-table  tr>td.active .num-input input{display: block;}
+.amp-table .num-input span.number-format{display: block;width: 100%; padding: 6px 10px; line-height: 20px; height: 34px; border: solid 1px #dae1e7; background-color: #f3f4f8;}
+.amp-table tr>td.active .num-input span.number-format{display: none;}
 
-#datatool-sim-main-table .td-input-wrapper .dropdown-toggle{padding:6px 12px;width:100%;border:solid 1px #dae1e7;background-color:#f3f4f8;color:#8592a3;border-radius: 0;text-align: left;}
-#datatool-sim-main-table .td-input-wrapper span.ys-icon-dropdown {
+.amp-table .dropdown-menu{right:0;left:inherit;min-width:100%;border:solid 1px #dfe5e9;}
+
+.td-input-wrapper .dropdown-toggle{padding:6px 12px;width:100%;border:solid 1px #dae1e7;background-color:#f3f4f8;color:#8592a3;border-radius: 0;text-align: left;}
+.td-input-wrapper span.ys-icon-dropdown {
     display: block;
     position: absolute;
     width: 14px;
@@ -138,7 +144,7 @@
     right: 8px;
     margin-top: -4px;
     background-position: -170px -261px;
-}
+}*/
 #datatool-sim #datatool-sim-main-table .amp-table thead{background-color:transparent;}
 #datatool-sim #datatool-sim-main-table .amp-table thead>tr>th{text-align: left;}
 #datatool-sim #datatool-sim-main-table .amp-table tr>th:nth-child(1),
@@ -147,7 +153,7 @@
 #datatool-sim #datatool-sim-main-table .amp-table tr>td{padding-left:15px;padding-right:15px;}
 #datatool-sim #datatool-sim-main-table .amp-table tr>th{padding-left:25px;font-size: 14px;color:#8592a3;}
 #datatool-sim #datatool-sim-main-table .amp-table thead>tr>th{padding-left:15px;}
-#datatool-sim #datatool-sim-main-table .amp-table span{color:#8592a3;}
+
 #datatool-sim-main-table .amp-table>tbody>tr>th,
 #datatool-sim-main-table .amp-table>tbody>tr>td,
 #datatool-sim-main-table .amp-table>tfoot>tr>th,
@@ -233,3 +239,37 @@
 
 .td-input-wrapper.select-input  .dropdown-menu>li>a{line-height: 24px;}
 .td-input-wrapper .dropdown-menu>li>a:focus,.td-input-wrapper .dropdown-menu>li>a:hover,.td-input-wrapper .dropdown-menu>li.active>a{background-color:#dae1e7;color:#373c32;}
+
+
+.amp-table .td-input-wrapper input{width:100%;padding:6px 10px;line-height:20px;height:34px;border:solid 1px #dae1e7;background-color:#f3f4f8;}
+
+.amp-table .num-input input{display: none;}
+.amp-table  tr>td.active .num-input input{display: block;}
+.num-input span.number-format{display: block;width: 100%; padding: 6px 10px; line-height: 20px; height: 34px; border: solid 1px #dae1e7; background-color: #f3f4f8;}
+tr>td.active .num-input span.number-format{display: none;}
+
+.amp-table .dropdown-menu{right:0;left:inherit;min-width:100%;border:solid 1px #dfe5e9;}
+
+.td-input-wrapper .dropdown-toggle{padding:6px 12px;width:100%;border:solid 1px #dae1e7;background-color:#f3f4f8;color:#8592a3;border-radius: 0;text-align: left;}
+.td-input-wrapper span{color:#8592a3;}
+.td-input-wrapper span.ys-icon-dropdown {
+    display: block;
+    position: absolute;
+    width: 14px;
+    height: 8px;
+    top: 50%;
+    right: 8px;
+    margin-top: -4px;
+    background-position: -170px -261px;
+}
+
+/*td status*/
+tr>td.active{}
+tr>td.error{}
+tr>td.error .td-input-wrapper{outline:solid 2px #ef4138;outline-offset: -1px;}
+tr>td.error .td-input-wrapper:before{display: block;position: absolute;width:24px;height:24px;top:0;right:0;content:" ";
+    background-image: url(../../images/icon.png);background-repeat: no-repeat;background-position:-331px -198px;  }
+tr>td.change{}
+tr>td.change .td-input-wrapper{ }
+tr>td.change .td-input-wrapper input{background-color:#d8e8db;}
+tr>td.change .td-input-wrapper span{background-color:#d8e8db;color:#3a4153;}
