--- a/app/static/css/common/static_table.css
+++ b/app/static/css/common/static_table.css
@@ -1,4 +1,5 @@
 /*amp table*/
+.amp-table-wrapper-swiper{overflow: hidden;position: relative;}
 .ys-amp .table, .amp-table-wrapper .table, .amp-table-wrapper-swiper .table {
     table-layout: fixed;
     margin-bottom:0;
