--- a/app/views/datatools/datatool_rent_package_rpanel.html
+++ b/app/views/datatools/datatool_rent_package_rpanel.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="right-content">
-        <table class="table table-no-bordered table-input-typeA">
+        <table class="table table-no-bordered amp-table table-input-typeA">
             <tbody>
                 <tr>
                     <td>
