--- a/app/static/css/views/datatools.css
+++ b/app/static/css/views/datatools.css
@@ -211,7 +211,7 @@
 
 #rpg-set-table-wrapper .td-input-wrapper{position: absolute;width:100%;height:100%;left:0;top:0;}
 
-#rpg-set-table-wrapper .td-input-wrapper input{height:100%;border:0;padding:6px;line-height: 24px;width:100%;color:#3a4153;}
+#rpg-set-table-wrapper .td-input-wrapper input{height:100%;border:0;padding:6px;line-height: 24px;width:100%;color:#3a4153;background-color:#fff;}
 #rpg-set-table-wrapper .td-input-wrapper input:focus{outline:solid 3px #8ec1f6;outline-offset: -2px;}
 #rgp-set #rent-update-table-wrapper .ys-table-static{border-right:solid 1px #dfe5e9;margin-bottom: 0;}
 #rgp-set #rent-update-table-wrapper .ys-table-static tr>th{color:#8592a3;font-size: 13px;padding-left:0;}
@@ -250,7 +250,7 @@ tr>td.active .num-input span.number-format{display: none;}
 
 .amp-table .dropdown-menu{right:0;left:inherit;min-width:100%;border:solid 1px #dfe5e9;}
 
-.td-input-wrapper .dropdown-toggle{padding:6px 12px;width:100%;border:solid 1px #dae1e7;background-color:#f3f4f8;color:#8592a3;border-radius: 0;text-align: left;}
+.td-input-wrapper .dropdown-toggle,.amp-table .dropdown-toggle{padding:6px 12px;width:100%;border:solid 1px #dae1e7;background-color:#f3f4f8;color:#8592a3;border-radius: 0;text-align: left;}
 .td-input-wrapper span{color:#8592a3;}
 .td-input-wrapper span.ys-icon-dropdown {
     display: block;
