--- a/app/static/css/common/static_table.css
+++ b/app/static/css/common/static_table.css
@@ -15,6 +15,8 @@
     color: #8592a3;
 }
 
+.ys-amp .table-no-bordered thead{background-color:transparent;}
+
 .amp-table tr>th, .amp-table tr>td {
     height: 40px;
     overflow: hidden;
