--- a/app/static/css/views/datatools.css
+++ b/app/static/css/views/datatools.css
@@ -29,18 +29,30 @@
 
 /*irrplan*/
 #irr-plan{}
+#irr-plan .amp-block{}
 #irr-plan .table td.active {
-    background-color: #eaeaea;
+    background-color: #dfe5e9;
 }
+#irr-plan .amp-block>thead{background-color:#f3f4f8;border-bottom:solid 1px #dfe5e9;}
 #irr-plan  .ys-table-static .table{}
-#irr-plan  .ys-table-static .table tr>th{padding-left:15px;padding-right:20px;color:#333;padding:0 10px;vertical-align: middle;}
+#irr-plan  .table>tbody>tr>th{padding-left:15px;padding-right:20px;color:#373c42;padding:0 10px;vertical-align: middle;height: 40px;overflow: hidden;}
+
 #irr-plan .table tbody>tr>td {
     padding: 3px 10px;
     text-align: right;
     cursor: pointer;
-    height: 40px;
+    height: 42px;
     line-height: 34px;
+    font-size:13px;
+    color:#373c42;
+    overflow: hidden;
 }
+#irr-plan .amp-table>tbody>tr.tr-main.tr-head{background-color:#f3f4f8;height:28px;}
+#irr-plan .amp-table>tbody>tr.tr-main.tr-head>th,
+#irr-plan .amp-table>tbody>tr.tr-main.tr-head>td{padding:3px 10px;height:28px;line-height: 20px;}
+
+#irr-plan .td-input-wrapper i.unit-addon{float:right;margin-left:5px;}
+#irr-plan .ys-table-static .table  tbody>tr>td{text-align:left;}
 #irr-plan .table td input {
     display: none;
     width: 100%;
@@ -51,7 +63,12 @@
     line-height: 34px;
     font-size: 14px;
 }
+#irr-plan .table td.active{background-color:#eaeaea; }
+#irr-plan .table td.active input{display: block;border-bottom: solid 2px #ccc; padding-right: 5px;background-color: #fff;border:solid 1px #dfe5e9;}
+#irr-plan .table td.active span.number-format,.ys-amp .table td.active span.td-format{display: none;border:solid 1px #dfe5e9;background-color:#f3f4f8;}
+.ys-amp .table td.active i.unit-addon{display:none;}
 /*table td status*/
+/*
 #irr-plan .table tbody>tr>td.change{border-left:solid 2px #38b6e6;}
 #irr-plan .table tbody>tr>td.error{border-left:solid 2px #e64e4d;position: relative;}
 #irr-plan .table tbody>tr>td.error:before{display: block;content:"error";position: absolute;font-size: 14px;height:22px;line-height: 22px;top:4px;left:10px;font-weight: bold;color:#e64e4d;}
@@ -63,12 +80,16 @@
 #irr-plan .table td.active{background-color:#eaeaea; }
 #irr-plan .table td.active input{display: block;border-bottom: solid 2px #ccc; padding-right: 5px;}
 #irr-plan .table td.active span.number-format,.ys-amp .table td.active span.td-format{display: none;}
+*/
 
-#irr-plan  .ys-table-static .table tr.tr-main>th{color:#333;}
-#irr-plan  .ys-table-static .table tr.tr-sub>th{color:#999;}
+#irr-plan  .ys-table-static .table tr.tr-main>th{padding-left:25px;color:#373c42;font-size:13px;}
+#irr-plan  .ys-table-static .table tr>th,
+#irr-plan  .ys-table-static .table tr>td{padding-left:25px}
+
+#irr-plan  .ys-table-static .table tr.tr-sub>th{color:#8592a3;font-size:13px;}
 #irr-plan  .ys-table-static .table tr.tr-sub>th span{display:block;font-size:12px;line-height: 18px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
-#irr-plan  .ys-table-static .table tr.tr-sub>th.th-note span{color:#333;}
-#irr-plan  .ys-table-static .table tr.tr-sub>th.th-note span:nth-last-child(1){color:#757575;}
+#irr-plan  .ys-table-static .table tr.tr-sub>th.th-note span{color:#373c32;font-weight:bold;}
+#irr-plan  .ys-table-static .table tr.tr-sub>th.th-note span:nth-last-child(1){color:#8592a3;}
 #irr-plan .amp-table-wrapper{position: relative;padding-left:375px;}
 #irr-plan .amp-table-wrapper .ys-table-static{position: absolute;top:0;left:0;}
 #irr-plan .ys-table-static .table>thead>tr>th{text-align: left;}
@@ -77,24 +98,32 @@
 #irr-plan .amp-table-wrapper .table-scroll>thead>tr>th{text-align: right;}
 #irr-plan .ys-footer-block .input-wrapper{height:34px;line-height: 34px;width:295px;}
 #irr-plan .ys-footer-block .input-wrapper input{border:solid 1px #ddd;margin-left:6px;height:34px;width:200px;float:right;}
+
+#irr-plan .amp-table tr.tr-split{padding-top:16px;padding-bottom:16px;height:76px;border-top:solid 1px #dfe5e9;border-bottom:solid 1px #dfe5e9;}
+#irr-plan .amp-table tr.tr-split-top{height:58px;/*padding-top:16px;*/border-top:solid 1px #dfe5e9; }
+#irr-plan .amp-table tr.tr-split-top>th,#irr-plan .amp-table tr.tr-split-top>td{padding-top:18px;height:58px;}
+#irr-plan .amp-table tr.tr-split-bottom{height:58px;/*padding-bottom:16px;*/border-bottom:solid 1px #dfe5e9; }
+#irr-plan .amp-table tr.tr-split-bottom>th,#irr-plan .amp-table tr.tr-split-bottom>td{padding-bottom:18px;height:58px;}
+#irr-plan .amp-table tr.tr-split-bottom+tr.tr-split{border-top:0;}
+#irr-plan .amp-table tr.tr-split+tr{border-top:0;}
+
 /*#amp-tookit-sim  .table-scroll>tbody>tr>td{padding:0;}*/
 #irr-plan .table .td-input-wrapper {
     position: relative;
     width: 100%;
-    height: 34px;
-    border: solid 1px #ddd;
-    padding-right:3px;
+    /*height: 30px;*/
+    background-color:#f3f4f8;
 }
 #irr-plan  .table .td-input-wrapper span{padding-right:5px;}
-#irr-plan  .table .td-input-wrapper.padding-r-15 .number-format{padding-right:15px;}
+#irr-plan  .table .td-input-wrapper.padding-r-15 .number-format{padding-right:3px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;background-color: transparent;}
 
 /*block btn-wrapper*/
-#irr-plan .bottom-block{position: absolute; bottom: 0; width: 100%; left: 0;}
+#irr-plan .bottom-block{position: absolute;padding-right:30px; bottom: 0; width: 100%; left: 0;background-color:#f3f4f8;border-top:0;}
 #irr-plan .btn-wrapper{height:72px;overflow: hidden;padding-top:20px;padding-bottom:20px;}
 #irr-plan .btn-wrapper .amp-btn{height:32px;padding:3px 15px;text-align: center;border-radius:0;font-size:14px;line-height: 24px;border: solid 1px #5ab46e;min-width: 110px;border-radius: 2px;}
 #irr-plan .btn-wrapper .amp-btn.amp-btn-reverse{background-color:#fff;color: #5ab46e;}
 #irr-plan .btn-wrapper .amp-btn { float: right; margin-left: 20px; }
-
+#irr-plan  .swiper-wrapper .amp-table tr>th{text-align: right;}
 
 /*rgp-set-index*/
 #rgp-set-index{}
@@ -237,6 +266,7 @@
 .td-input-wrapper.select-input .dropdown-menu{margin-top: 0;background-color:#fff;border:solid 1px #dae1e7;color:#373c42;font-size:14px;    border-radius: 0;
  }
 
+.td-input-wrapper.select-input  .dropdown-menu>li>a{line-height: 24px;}
 .td-input-wrapper.select-input  .dropdown-menu>li>a{line-height: 24px;}
 .td-input-wrapper .dropdown-menu>li>a:focus,.td-input-wrapper .dropdown-menu>li>a:hover,.td-input-wrapper .dropdown-menu>li.active>a{background-color:#dae1e7;color:#373c32;}
 
