--- a/app/views/datatools/datatool_rpg_set_index.html
+++ b/app/views/datatools/datatool_rpg_set_index.html
@@ -6,8 +6,8 @@
             <li><a href="../amp/amp_input_investment.html" id="tri-0-1-1" class="header-subnav-item  active" target="#page-frame">租金包设定</a></li>
         </ul>
     </div><!--amp-content-header-->
-    <div class="ys-block">
-        <div class="amp-table-wrapper" id="rpg_set_info">
+    <div class="amp-block">
+        <div class="amp-table-wrapper" id="rpg-set-info">
             <table class="table table-right-bordered amp-table" >
                 <thead>
                 <tr>
@@ -46,3 +46,4 @@
         </div>
     </div>
 </div><!-- contentpanel -->
+<script src="../../static/js/views/datatools/rpg_index.js"></script>
